--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -116,7 +116,7 @@
 
     <footer id="contact">
         <div class="container">
-            <p>&copy; 2020 All rights reserved</p>
+           <p>Compyright &copy; 2020 All rights reserved</p>
         </div>
     </footer>
 
